user-apps/tools/bentopdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bentopdf
  labels:
    app: bentopdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bentopdf
  template:
    metadata:
      labels:
        app: bentopdf
        netpol.cilium.io/egress-deny: "true"
        netpol.cilium.io/ingress-from-ingress: "true"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
      containers:
        - name: bentopdf
          image: ghcr.io/alam00000/bentopdf-simple:2.8.8
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 16Mi
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
