user-apps/tools/bentopdf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bentopdf
spec:
  selector:
    app: bentopdf
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 8080
